syntax = "proto3";

option csharp_namespace = "PshService";

package Psh;

service PshService {
	rpc Open (OpenRequest) returns (OpenReply);
	rpc Close (CloseRequest) returns (Reply);
	rpc MeasureCurrent (MeasureCurrentRequest) returns (MeasureCurrentReply);
	rpc SetVoltageCurrent (SetVoltageCurrentRequest) returns (Reply);
	rpc SetOutput (OutputRequest) returns (Reply);
	rpc GetInfo (InfoRequest) returns (InfoReply);
}

message OpenRequest {
	string port_name = 1;
}

message OpenReply {
	int32 status = 1;
	string id = 2;
	string error = 3;
}

message CloseRequest {
	string id = 1;
}

message Reply {
	int32 status = 1;
	string error = 2;
}

message MeasureCurrentRequest {
	string id = 1;
}

message MeasureCurrentReply {
	int32 status = 1;
	double value = 2;
	string error = 3;
}

message SetVoltageCurrentRequest {
	string id = 1;
	double voltage = 2;
	double current = 3;
}

message OutputRequest {
	string id = 1;
	bool output = 2;
}

message InfoRequest {
	string id = 1;
}

message InfoReply {
	int32 status = 1;
	string info = 2;
	string error = 3;
}